finished static pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'About Us') %>
 <h1>About Us</h1>
 <p>
 The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
@@ -5,3 +6,4 @@ is a project to make a book and screencasts to teach web development
 with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
 is the sample application for the tutorial.
 </p>
+
